<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_connected"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:minWidth="280dp"
        android:maxWidth="320dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        app:layout_constraintTop_toBottomOf="@id/connection_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/source_button"
        android:layout_width="wrap_content"
        android:minWidth="280dp"
        android:maxWidth="320dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/source_code"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
